--- a/docs/advanced/i18n.rst
+++ b/docs/advanced/i18n.rst
@@ -135,3 +135,14 @@ If :setting:`CMS_HIDE_UNTRANSLATED`  is ``True`` in your ``settings.py``
 and you are on a page that doesn't yet have an English translatio and you view the
 German version then the language chooser will redirect to ``/``. The same goes
 for urls that are not handled by the cms and display a language chooser.
+
+
+*********************************
+CMS_LANGUAGES_URL_IGNORE_PREFIXES
+*********************************
+
+In complex Django CMS installations there could be URLs on the same site as
+Django CMS but which are processed by your HTTP server in some other manner and
+never passed to Django CMS. Multilingual middleware would process also links to
+such URLs, so you can use :setting:`CMS_LANGUAGES_URL_IGNORE_PREFIXES` to
+configure which URLs should be left as they are.
